--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-loader": "^9.1.2",
     "forward-tcp": "^1.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.14.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
   },
   "scripts": {
-    "start": "webpack serve --port 3000",
+    "start": "webpack serve --port 3000 --client-web-socket-url ws://localhost:3001/ws",
     "forward": "forward-tcp -p 3001 -s localhost:3000"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
